fixed later spacing

--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ body {
 	background-color: rgba(0,0,225, 0.45);
 	font-size: 40px;
 	font-family: "Oswald", sans-serif;
-	letter-spacing: 1.5px;
+	letter-spacing: 1.3px;
 	display: flex;
 	justify-content: center;
 	align-items: center;
